# Olist_v5_churn_prediction

./: .gitignore  01_eda.ipynb  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py
olist-ml-churn-prediction/: README.md  pyproject.toml  to_do.txt
olist-ml-churn-prediction/docs/: conf.py  index.rst
olist-ml-churn-prediction/mlruns/377685583432860345/: meta.yaml
olist-ml-churn-prediction/notebooks/: 00_overview_2025-10-07.ipynb  01_geolocation_data_eda_2025-10-07.ipynb  01_geolocation_data_eda_and_preprocessing_2025-10-07.ipynb  02_classified_data_eda_and_preprocessing_2025-11-07.ipynb  03_public_customers_data_eda_and_preprocessing_2025-12-07.ipynb  04_public_dataset_eda_and_preprocessing_2025-12-07.ipynb  05_payments_eda_and_preprocessing_2025-12-07.ipynb  06_product_measures_eda_and_preprocessing_2025-12-07.ipynb  07_sellers_eda_and_preprocessing_2025-12-07.ipynb
olist-ml-churn-prediction/notebooks/EDA/: geolocation_data_eda.ipynb  geolocation_data_eda_2025-10-07.ipynb  overview.ipynb  payments_eda.ipynb  payments_eda_2025-12-07.ipynb  product_measures_eda.ipynb  product_measures_eda_2025-12-07.ipynb  public_customers_data_eda.ipynb  sellers_eda.ipynb  (+2 more)
olist-ml-churn-prediction/preprocessings/: preprocessing_manifest.yaml
olist-ml-churn-prediction/src/: schemas.py
olist-ml-churn-prediction/typed_schemas/: payments_types.yaml  product_measures_types.yaml  public_customers_types.yaml  public_data_types.yaml  sellers_types.yaml  translation_types.yaml
olist-ml-churn-prediction/validations/: manifest.yaml  validation_manifest.yaml
(+113 files in other folders)
